k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alkobot
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: alkobot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alkobot
spec:
  selector:
    matchLabels:
      app: alkobot
  replicas: 1
  template:
    metadata:
      labels:
        app: alkobot
    spec:
      containers:
        - image: registry.wawan.pro/yabloko/alkobot
          name: alkobot
          command: ['./alkobot', '-r', '200', '-s', '20']
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry.wawan.pro
